[package]
name = "json2cbor"
version = "1.1.0"
authors = ["Tim Hutt <tdhutt@gmail.com>"]
edition = "2018"
description = "Convert JSON to CBOR"
license = "0BSD"
repository = "https://github.com/Timmmm/json2cbor"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
serde-transcode = "1.1"
anyhow = "1.0"
clap = { version = "3.2.17", features = ["derive"] }
